# tch-mentormatching

./: .README.md.swp  .gitattributes  .gitignore  README.md  desired_layout.txt  main.py  mentor_mentee_data_generator.py  pyproject.toml  requirements.txt  run_mm.py  summarize_pdfs.py
.github/workflows/: black.yml  pylint.yml  unit-tests.yml
data/: mentor_data.csv  mentor_data_summaries_ranks.csv  mentor_data_with_summaries.csv  mentor_data_with_summaries_test.csv  mentor_student_cvs_final.csv  professor_types.txt
data/txt_all/: ._16943318.txt  10133659.txt  10133662.txt  10282038.txt  10282041.txt  10282047.txt  10282050.txt  10413721.txt  10413722.txt  10413724.txt  10675389.txt  11034617.txt  11034619.txt  11034622.txt  11034623.txt  11312395.txt  11312397.txt  11312399.txt  11312401.txt  11312407.txt  11312408.txt  11312412.txt  11419581.txt  11419582.txt  11419586.txt  11548175.txt  11548185.txt  11548190.txt  11701635.txt  11701636.txt  11761028.txt  11761030.txt  11761035.txt  11761036.txt  11931797.txt  11931798.txt  11931801.txt  12115878.txt  12243185.txt  12243186.txt  (+5510 more)
db/index_summary_above_assistant/: index.faiss  index.pkl
db/index_summary_assistant_and_above/: index.faiss  index.pkl
notebooks/: measure_accuracy_per_apporach.ipynb
simulated_data/: mentor_student_cv_267825.csv  mentor_student_cvs_final.csv  mentor_student_cvs_test.csv  mentor_student_cvs_with_summaries.csv
src/: generate_text.py  utils.py
src/config/: __init__.py  client.py  (+3 more)
templates/: mentor_table_template.html
tests/: test_io_utils.py  test_main.py  test_utils.py
(+29 files in other folders)
