[project]
name = "tch-mentormatching"
version = "0.1.0"
description = "Summarization RAG pipeline for MentorMatching at TCH/BCM"
readme = "README.md"
requires-python = ">=3.10, <3.12"
dependencies = [
    "aiohttp>=3.12.13",
    "anyio>=4.9.0",
    "asyncio>=3.4.3",
    "faiss-cpu==1.7.4",
    "gpt4all==2.7.0",
    "gradio==4.44.0",
    "gradio-client==1.3.0",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-openai>=0.1.21",
    "openai>=1.86.0",
    "numpy<2.0",
    "pandas==2.2.2",
    "pypdf==4.2.0",
    "pypdf2==3.0.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.21.0",
    "python-docx>=1.1.2",
    "python-dotenv==1.0.1",
    "tenacity==8.4.1",
    "tqdm==4.66.4",
    "httpcore>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.7.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
